--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-list row">
                   <li class="navbar-item navbar-item-after"><a class="navbar-link" href="#">Log In</a></li>
                   <li class="navbar-item navbar-item-after"><a class="navbar-link" href="#">844-332-6440</a></li>
-                  <li class="navbar-item btn-get"><a class="navbar-link" href="#">get started</a></li>
+                  <li class="navbar-item btn-get-h"><a href="#" class="btn-g">Get started</a></li>
                 </ul>
               </div>
             </div>
@@ -239,35 +239,37 @@
   </div>
 </section>
     </main>
-    <footer>
-      <section id="lst">
+    <footer class="footer">
       <div class="container">
-        <div class="lst">
-          <img src="img/Logo.svg" alt="logo" width="110" height="42">
-          <h2 class="people">A people company.</h2>
-          <ul class="list-social">
-          <li class="list-item"><a href="#"><img src="img/facebook.svg" alt="facebook" width="13" height="24"></a></li>
-          <li class="list-item"><a href="#"><img src="img/twitter.svg" alt="twitter" width="30" height="28"></a></li>
-          <li class="list-item"><a href="#"><img src="img/linkedin.svg" alt="linkedin" width="30" height="28"></a></li>
-          <li class="list-item"><a href="#"><img src="img/instagram.svg" alt="instagram" width="25" height="25"></a></li>
-          </ul>
-          <hr>
-        </div>
-        </div>></section>
-        <section id="in">
-          <div class="container">
-          <div class="info">
-            <span>© 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</span>
-            <ul class="inf">
-              <li class="list-item-green"><a href="#">Privacy Policy</a></li>
-              <li class="list-item-green"><a href="#">Terms of Service</a></li>
-              <li class="list-item-green"><a href="#">GDPR</a></li>
-              <li class="list-item-green"><a href="#">Careers</a></li>
-              <li class="list-item-green"><a href="#">Press Kit</a></li>
-            </ul>
+          <div class="footer-inner">
+              <div class="footer-top row">
+                  <div class="footer-logo">
+                      <a class="footer-logo-link" href="#">
+                          <img class="footer-log-img" src="img/logo-fot.png" alt="Logo" width="110" height="45">
+                      </a>
+                  </div>
+                  <h4 class="footer-title">A people company.</h4>
+                  <ul class="footer-list row">
+                      <li class="footer-item-soc">
+                              <img class="social-img" src="img/facebook.svg" alt="facebook">
+                              <img class="social-img" src="img/twitter.svg" alt="twitter">                    
+                              <img class="social-img" src="img/linkedin.svg" alt="linkedin">
+                              <img class="socials-img" src="img/instagram.svg" alt="instagram">
+                      </li>
+                  </ul>
+              </div>
+              <div class="footer-bootom row">
+                  <p class="registration">© 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</p>
+                  <ul class="footer-help row">
+                      <li class="footer-item"><a href="#" class="footer-item-link">Privacy Policy</a></li>
+                      <li class="footer-item"><a href="#" class="footer-item-link">Terms of Service</a></li>
+                      <li class="footer-item"><a href="#" class="footer-item-link">GDPR</a></li>
+                      <li class="footer-item"><a href="#" class="footer-item-link">Careers</a></li>
+                      <li class="footer-item"><a href="#" class="footer-item-link">Press Kit</a></li>
+                  </ul>
+              </div>
           </div>
-          </div>
-          </section>
+      </div>
   </footer>
 </body>
 </html>
